slurm/slurm-10772951.out
  File "tempe.py", line 28
    return res
         ^
SyntaxError: invalid syntax
